src/test/ui/associated-types/issue-26681.stderr
error[E0308]: mismatched types
  --> $DIR/issue-26681.rs:17:39
   |
LL |     const C: <Self::Fv as Foo>::Bar = 6665;
   |                                       ^^^^ expected associated type, found integer
   |
   = note: expected associated type `<<Self as Baz>::Fv as Foo>::Bar`
                         found type `{integer}`
   = note: consider constraining the associated type `<<Self as Baz>::Fv as Foo>::Bar` to `{integer}` or calling a method that returns `<<Self as Baz>::Fv as Foo>::Bar`
   = note: for more information, visit https://doc.rust-lang.org/book/ch19-03-advanced-traits.html

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
